<resources>
    <string name="app_name">Workflow Guidance</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="message_register">Not have an account?</string>
    <string name="txt_btn_register">Register Now</string>
    <string name="txt_head_register">Register to Workflow Guidance</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="submit_register">Submit Register</string>
    <string name="title_activity_main">Workflow Guidance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anonim</string>
    <string name="nav_header_subtitle">anonim@ratwareid.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tagline_header">Organize Master Data</string>
    <string name="tagline_detail">Makes task become easier.</string>
    <string name="msg_running">Please fill in all parts of the master data for easier to make work orders</string>
    <string name="copyright_ratwareid">Workflow Guidance - Ratwareid @2019</string>


    <string-array name="master_name">
        <item>Master User</item>
        <item>Master Department</item>
        <item>Master Position</item>
        <item>Master Job Type</item>
        <item>Master Item</item>
        <item>Master Warehouse</item>
        <item>Master Step</item>
        <item>Master Workflow</item>
    </string-array>

    <string-array name="master_detail">
        <item>List of data user</item>
        <item>List of department</item>
        <item>List of position</item>
        <item>List of job type</item>
        <item>List of item</item>
        <item>List of warehouse</item>
        <item>List of step in workflow</item>
        <item>List of workflow</item>
    </string-array>

    <array name="master_images">
        <item>@drawable/ic_m_user</item>
        <item>@drawable/ic_m_department</item>
        <item>@drawable/ic_m_position</item>
        <item>@drawable/ic_m_jobtype</item>
        <item>@drawable/ic_m_item</item>
        <item>@drawable/ic_m_warehouse</item>
        <item>@drawable/ic_m_step</item>
        <item>@drawable/ic_m_workflow</item>
    </array>


    <string-array name="username">
        <item>User 1</item>
        <item>User 2</item>
        <item>User 3</item>
        <item>User 4</item>
        <item>User 5</item>
        <item>User 6</item>
        <item>User 7</item>
        <item>User 8</item>
    </string-array>

    <string-array name="userpos">
        <item>HRD</item>
        <item>Java Web Programmer</item>
        <item>Technician</item>
        <item>Technician</item>
        <item>Mobile Developer</item>
        <item>Mobile Developer</item>
        <item>Senior Analyst</item>
        <item>CEO</item>
    </string-array>

    <string-array name="userdiv">
        <item>Human Resouce</item>
        <item>IT &amp; Networking</item>
        <item>IT &amp; Networking</item>
        <item>IT &amp; Networking</item>
        <item>IT &amp; Networking</item>
        <item>IT &amp; Networking</item>
        <item>IT &amp; Networking</item>
        <item>-</item>
    </string-array>

    <array name="userpict">
        <item>@drawable/ic_user_new</item>
        <item>@drawable/ic_user_new</item>
        <item>@drawable/ic_user_new</item>
        <item>@drawable/ic_user_new</item>
        <item>@drawable/ic_user_new</item>
        <item>@drawable/ic_user_new</item>
        <item>@drawable/ic_user_new</item>
        <item>@drawable/ic_user_new</item>
    </array>

</resources>
