<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg_gradient1">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_txt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_head_register"
            android:textAlignment="center"
            android:textSize="20sp"
            android:paddingTop="60dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed-medium"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">
                    <EditText
                        android:id="@+id/id_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:drawableLeft="@drawable/ic_identification"
                        android:drawablePadding="8dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/id_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Address"
                        android:drawableLeft="@drawable/ic_notebook"
                        android:drawablePadding="8dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/id_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="8dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_password"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/ic_padlock"
                        android:drawablePadding="8dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_re_password"
                        android:hint="@string/retype_password"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/ic_padlock"
                        android:drawablePadding="8dp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.button.MaterialButton
                    android:id="@+id/btn_submit_register"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doRegister"
                    android:text="@string/submit_register"
                    android:textColor="@color/white"
                    app:backgroundTint="@android:color/transparent"
                    app:cornerRadius="5dp"
                    app:rippleColor="#33AAAAAA"
                    app:strokeColor="@color/colorAccent"
                    app:strokeWidth="2dp"
                    android:layout_marginTop="30dp"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>